# newton_cpp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/main/: newton.h
src/test/: newton_test.cpp
